# Rpur

./: .gitignore  Rpur_extractor.bat  pyproject.toml
notebook/: step0_tutorial_pytesseract.ipynb  step1_poc_extract_text.ipynb
src/: config.py  main.py  ocr_utils.py
