[project]
name = "rpur"
version = "0.1.0"
description = "env pour script rpur"
authors = [
    {name = "Pierrick BERTHE",email = "pierrick.berthe@gmx.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-docx (==1.1.2)",
    "easyocr (==1.7.2)",
    "language-tool-python (==2.9.3)",
    "numpy (==2.1.2)",
    "pandas (==2.2.3)",
    "pillow (==11.0.0)",
    "opencv-python (==4.11.0.86)",
    "tqdm (==4.67.1)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
